Changed CSS style of links without images to prevent whitespace Link to gallery instead of first image of gallery Skip videos until video-player is implemented
git-svn-id: https://plugins.svn.wordpress.org/facebook-social-stream/trunk@1201065 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -101,9 +101,13 @@
 }
 .wp-fb-social-stream .fb-message-linkbox-txt {
 	float: right;
-	width: 75%;
-	margin-left: 5%;
+	width: 100%;
 }
+.wp-fb-social-stream .fb-message-linkbox-img + .fb-message-linkbox-txt {
+	margin-left: 5%;
+	width: 75%;
+}
+
 .wp-fb-social-stream .fb-message-linkbox-name {
 	font-weight: bold;
 }
